# triv

./: .gitignore  CHANGELOG.md  Makefile  README.md  lint.sh  pyproject.toml  setup.sh
docker/: Dockerfile.webui-backend  Dockerfile.webui-frontend  docker-compose.yml  nginx.conf
triv/: __init__.py
triv/core/: __init__.py  enums.py  env.py  events.py  models.py  network.py  network_v2.py  secrets.py  state.py  topology.py
triv/drivers/: __init__.py  base.py  generic_driver.py  generic_driver_agent.json  generic_driver_agent.py  generic_driver_ai_tool.json  generic_driver_app.json  generic_driver_app.py  generic_driver_container.json  generic_driver_container.py  generic_driver_libvirt.json  generic_driver_libvirt.py  generic_driver_llm.json  generic_driver_llm.py  generic_driver_netcfg.py  generic_driver_ollama.json  generic_driver_ollama.py  generic_driver_remote.json  generic_driver_remote.py  registry.py
triv/plugins/: __init__.py  base.py  manager.py
triv/wizard/: .rules  .system_prompt  wizard_app.py
triv/wizard/capabilities/: capabilities-node-triv-wizard-agent.json  capabilities-node-triv-wizard-app.json  capabilities-node-triv-wizard-llm.json
webui/backend/: app.py  auth.py  bootstrap.py  health.py  node_helpers.py  reconcile.py  requirements.txt  runtime.py  shared.py  wizard_manager.py
webui/backend/routers/: adhoc.py  ai.py  auth.py  capabilities.py  cleanup.py  connectivity.py  drivers.py  netstats.py  networks_v2.py  nodes.py  orgs.py  plugins.py  (+7 more)
webui/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+33 files in other folders)
